[package]
name = "cmd_wrk"
description = "A framework for writing commands as native functions"
tags = ["commands", "cli", "parser", "framework"]
version = "0.0.1"
authors = ["Khionu Sybiern <dev@khionu.net>"]
edition = "2018"
license = "Apache-2.0 OR MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cmd_wrk_macros = "0.0.1"
cmd_wrk_parser = "0.0.1"
