[package]
name = "cmd_wrk_macros"
version = "0.1.0"
authors = ["Khionu Sybiern <dev@khionu.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0.2"
syn = { version = "1.0.5", features = [ "full" ] }
