[package]
name = "cmd_wrk_parser"
version = "0.1.0"
authors = ["Khionu Sybiern <dev@khionu.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
lazy_static = "1.4.0"
regex = { version = "1.3.1", optional = true }
typemap = "0.3.3"

[features]
default = [ "bundle-primitive", "bundle-std" ]
bundle-primitive = [ "primitive-parsers" ]
primitive-parsers = []
bundle-std = [ "std-parsers" ]
std-parsers = [ "regex" ]
